2017-11-19         Arnold D. Robbins     <arnold@skeeve.com>

	* make_extension_directory: Add -C option for a C++ extension.

2017-11-18         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* Development: Fix typo.

2017-10-07         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* make_extension_directory.sh: Change default changelog message
	to say "Rebuilt for new release".

2017-10-03         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* README, Development: Update rpmbuild instructions now that the
	spec files have been removed from the tarballs.

2016-07-30         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* make_extension_directory.sh:  Use %{url} in Source0.

2016-07-23         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* make_extension_directory.sh: Fix FSF address. Patch spec file
	template to meet Fedora requirements.

2016-07-22         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* make_extension_directory.sh: Patch spec file template to fix some
	rpmlint complaints.

2016-07-21         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* make_extension_directory.sh: Add comment about num_expected_args
	actually being the maximum number of allowed args.

2016-05-16         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* README, Development: Note that autopoint may be in a separate package.

2016-05-01         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* make_extension_directory.sh: Test whether git is available.

2016-05-01         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* make_extension_directory.sh: Need to invoke "./configure", not
	"configure". Also, the man page should have the extension "3am",
	not "am".

2015-06-02         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* README, Development: Tell which packages are required (autoconf,
	automake, gettext, and libtools).
