@@ -1,3 +1,8 @@
+2017-11-20         Andrew J. Schorr     <ajschorr@fedoraproject.org>
+
+	* make_extension_directory.sh: Patch to create sample extension code
+	that is compatible with API versions 1 and 2.
+
 2017-11-19         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* make_extension_directory: Add -C option for a C++ extension.
